--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=AlarmManger
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -13,6 +13,13 @@ DB_PORT=3306
 DB_DATABASE=nagios
 DB_USERNAME=root
 DB_PASSWORD=
+
+DB_CONNECTION_SECOND=mysql
+DB_HOST_SECOND=127.0.0.1
+DB_PORT_SECOND=3306
+DB_DATABASE_SECOND=users
+DB_USERNAME_SECOND=root
+DB_PASSWORD_SECOND=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
