--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,11 @@
         "fx3costa/laravelchartjs": "^2.8",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
+        "laravel/nexmo-notification-channel": "^2.5",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "maatwebsite/excel": "^3.1",
+        "nexmo/client": "^2.4",
         "santigarcor/laratrust": "^6.3"
     },
     "require-dev": {
