--- a/.env.example
+++ b/.env.example
@@ -34,13 +34,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=alarmmanger@gmail.com
+MAIL_PASSWORD=b8e75is8ZNTB
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=alarmmanger@gmail.com
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -54,3 +53,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+NEXMO_KEY=6413630a
+NEXMO_SECRET=s2UhSCdiqm1NoH51
+NEXMO_NUMBER=212676268079
